overlays/sandbox/membership-hub-gke-autopilot2/compiled/asm-gateway/service_istio-ingressgateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
  name: istio-ingressgateway
  namespace: asm-gateway
spec:
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    port: 80
  - name: https
    port: 443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: LoadBalancer
