overlays/sandbox/membership-hub-gke-autopilot2/compiled/asm-gateway/gateway_test-smoke-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: test-smoke-gateway
  namespace: asm-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-access
      number: 80
      protocol: HTTP
